--- a/app/src/main/res/drawable/ic_sharp_mood.xml
+++ b/app/src/main/res/drawable/ic_sharp_mood.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="64dp"
     android:height="64dp"
-    android:tint="@color/theme_color"
+    android:tint="@color/tmdb_secondary_color"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
