--- a/app/src/main/res/drawable/ic_time.xml
+++ b/app/src/main/res/drawable/ic_time.xml
@@ -1,7 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="@dimen/button_drawable_width"
     android:height="@dimen/button_drawable_width"
-    android:tint="@color/theme_color"
+    android:tint="@color/tmdb_secondary_color"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
