--- a/app/src/main/res/drawable/normal_button_bg.xml
+++ b/app/src/main/res/drawable/normal_button_bg.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <corners android:radius="@dimen/media_item_radius" />
-    <solid android:color="@color/theme_color" />
+    <solid android:color="@color/tmdb_secondary_color" />
 
 </shape>
