--- a/app/src/main/res/drawable/radius_bg_theme.xml
+++ b/app/src/main/res/drawable/radius_bg_theme.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/theme_color" />
+    <solid android:color="@color/tmdb_secondary_color" />
     <corners android:radius="@dimen/media_item_radius" />
 
 </shape>
