--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <color name="theme_color">#0AB5E1</color>
+        <color name="tmdb_secondary_color">#0AB5E1</color>
 <!--    <color name="theme_color">#88CCA4</color>-->
     <color name="main_bg_color">@color/black</color>
     <color name="contrary_main_bg_color">@color/white</color>
@@ -13,6 +13,6 @@
 
     <color name="content_text_color">@color/contrary_main_bg_color</color>
     <color name="button_text_color">@color/contrary_main_bg_color</color>
-    <color name="clickable_button_text_color">@color/theme_color</color>
-    <color name="star_color">@color/theme_color</color>
+    <color name="clickable_button_text_color">@color/tmdb_secondary_color</color>
+    <color name="star_color">@color/tmdb_secondary_color</color>
 </resources>
