1. Optimize the interface 2. Add progress bar prompt for login and logout

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -191,7 +191,7 @@
             android:padding="@dimen/common_margin"
             app:layout_constraintTop_toBottomOf="@id/cl_rating">
 
-            <androidx.appcompat.widget.SwitchCompat
+            <Switch
                 android:id="@+id/switch_aldult"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -229,7 +229,7 @@
             android:padding="@dimen/common_margin"
             app:layout_constraintTop_toBottomOf="@id/cl_aldult">
 
-            <androidx.appcompat.widget.SwitchCompat
+            <Switch
                 android:id="@+id/switch_night"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -287,6 +287,13 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <include
+            layout="@layout/view_status"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:viewModel="@{viewModel.statusModel}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
