--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -112,5 +112,12 @@
             app:layout_constraintTop_toTopOf="@id/login"
             app:layout_constraintVertical_bias="0.1" />
 
+        <include
+            layout="@layout/view_status"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            app:viewModel="@{viewModel.statusModel}" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
