--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -66,6 +66,7 @@
                         android:layout_height="0dp"
                         android:background="@drawable/search_button_bg"
                         android:text="@string/search"
+                        android:textAllCaps="false"
                         android:textColor="@{viewModel.lightMutedColor}"
                         app:layout_constraintBottom_toBottomOf="@id/et_search"
                         app:layout_constraintEnd_toEndOf="@id/et_search"
