--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -38,6 +38,7 @@
             android:text="@{viewModel.subTitles}"
             android:textColor="@{viewModel.mutedColor}"
             android:textSize="@dimen/small_title_size"
+            android:textAllCaps="false"
             app:layout_constraintBottom_toBottomOf="@id/tv_category"
             app:layout_constraintStart_toEndOf="@id/tv_category" />
 
