--- a/app/src/main/res/layout/item_media_single.xml
+++ b/app/src/main/res/layout/item_media_single.xml
@@ -62,7 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_margin"
-            android:text="@{viewModel.date}"
+            android:text="@{viewModel.releaseDates}"
             android:textColor="@{viewModel.mutedColor}"
             app:layout_constraintStart_toStartOf="@id/tv_title"
             app:layout_constraintTop_toBottomOf="@id/tv_title" />
