--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,7 +8,7 @@
 
     <color name="navigation_color">@color/main_bg_color</color>
     <color name="main_title_color">@color/contrary_main_bg_color</color>
-    <color name="sub_title_color">#CAC5D1</color>
+    <color name="sub_title_color">@android:color/darker_gray</color>
     <color name="small_title_color">@color/contrary_main_bg_color</color>
 
     <color name="content_text_color">@color/contrary_main_bg_color</color>
