--- a/app/src/main/res/layout/activity_content_list.xml
+++ b/app/src/main/res/layout/activity_content_list.xml
@@ -18,19 +18,19 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/main_bg_color"
+        android:background="@{(int)viewModel.dominantColor}"
         tools:context=".ui.ContentListActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appbarlayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@{(int)viewModel.dominantColor}">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/toolbar_height"
-                android:background="@color/main_bg_color"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:titleTextColor="@color/content_text_color">
 
@@ -50,7 +50,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:text="@{viewModel.title}"
-                    android:textColor="@color/content_text_color" />
+                    android:textColor="@{(int)viewModel.lightMutedColor}" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -66,9 +66,8 @@
                 android:id="@+id/cl_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/indicator_height"
-                android:layout_marginStart="@dimen/common_margin"
-                android:layout_marginEnd="@dimen/common_margin"
-                android:background="@color/main_bg_color"
+                android:paddingStart="@dimen/common_margin"
+                android:paddingEnd="@dimen/common_margin"
                 android:visibility="@{viewModel.isShowToolbar ? View.VISIBLE : View.GONE}"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -103,7 +102,6 @@
             android:id="@+id/recyclerview_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/main_bg_color"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
         <include
